Update homepage URL for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gold-corps",
-  "homepage": "https://github.com/Ceecodes001/goldcorpsinc",
+  "homepage": "https://Ceecodes001.github.io/GoldcCorps",
   "private": true,
   "version": "0.0.0",
   "type": "module",
