--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Also add these common exclusions for React/Vite projects
+node_modules/
+dist/
+build/
+.DS_Store
+*.log
